# devenv-manager

./: .gitignore  .prettierignore  LICENSE  README.md  README_EN.md  RELEASE_NOTES.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: catalog.rs  config.rs  dialog.rs  environments.rs  mod.rs  system.rs  task.rs
src-tauri/src/environment_records/: helpers.rs  mod.rs  registry.rs
src-tauri/src/services/: config.rs  elevation_service.rs  environment_discovery.rs  environment_record.rs  installer_service.rs  json_file_store.rs  mod.rs  system_status.rs  task_service.rs
src-tauri/src/services/common/: mod.rs  network.rs  shell.rs
src-tauri/src/services/installer/: database_setup.rs  environment_metadata.rs  file_system.rs  install_executor.rs  mod.rs  network.rs  process.rs  resources.rs
src-tauri/src/services/version_catalog/: mod.rs  providers.rs  service.rs
src-tauri/src/shared/: environment_definitions.rs  mod.rs  types.rs  utils.rs
src/main/: index.ts
src/main/ipc/: registerIpc.ts
src/main/services/: configService.ts  taskService.ts  (+7 more)
src/preload/: index.ts
src/renderer/: index.html
src/shared/: databaseInstallConfig.test.ts  databaseInstallConfig.ts  environmentDefinitions.ts  errorUtils.test.ts  errorUtils.ts  mirrorPresets.test.ts  mirrorPresets.ts  types.ts  versionCatalog.ts
(+122 files in other folders)
